<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:background="@color/darkGray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonSundayMessages"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_above="@+id/buttonWCCC"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/lato_thin"
        android:gravity="center"
        android:text="@string/SundayMessages"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <Button
        android:id="@+id/buttonStephenKuang"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/buttonSundayMessages"
        android:layout_below="@+id/buttonBibleStudy"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/lato_thin"
        android:gravity="center"
        android:text="@string/StephenKuangMessages"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSundayMessages"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBibleStudy"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/buttonGodwinMessages"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/lato_thin"
        android:gravity="center"
        android:text="@string/GodwinMessages"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSpecialMeeting"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/buttonBibleStudy"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_below="@+id/buttonSpecialMeeting"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/lato_thin"
        android:gravity="center"
        android:text="@string/BibleStudyMessages"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <Button
        android:id="@+id/buttonWCCC"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/buttonSundayMessages"
        android:background="@drawable/button_border"
        android:fontFamily="@font/lato_thin"
        android:gravity="center"
        android:text="@string/WCCCMessages"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/buttonSpecialMeeting"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/buttonGodwinMessages"
        android:layout_below="@+id/buttonGodwinMessages"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/lato_thin"
        android:gravity="center"
        android:text="@string/buttonSpecialMeeting"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />
</android.support.constraint.ConstraintLayout>
